# Notification-Gateway

./: Cargo.toml
migrations/: 0001_create_tables.sql
src/: main.rs
src/config/: database.rs  redis.rs
src/module/: mod.rs
src/module/notification_delivery_module/: mod.rs
src/module/notification_delivery_module/controllers/: mod.rs  worker_controller.rs
src/module/notification_delivery_module/errors/: mod.rs
src/module/notification_delivery_module/models/: email_payload.rs  mod.rs  notification.rs  payload.rs  push_payload.rs
src/module/notification_delivery_module/queries/: update_notification_status.sql
src/module/notification_delivery_module/repositories/: mod.rs  notification_repository.rs  redis_repository.rs
src/module/notification_delivery_module/utils/: fcm_token_manager.rs  mod.rs
src/module/notification_delivery_module/workers/: mod.rs  queue_worker.rs
src/module/notification_delivery_module/workers/queue_worker/: email_worker.rs  mod.rs  push_worker.rs  (+1 more)
src/module/notification_service_module/: mod.rs
src/module/notification_service_module/controllers/: notification_controller.rs
src/module/notification_service_module/errors/: mod.rs
src/module/notification_service_module/models/: mod.rs  notification.rs  payload.rs
src/module/notification_service_module/queries/: insert_noti.sql
src/module/notification_service_module/repository/: notification_repository.rs  redis_repository.rs
src/module/notification_service_module/repository_trait/: notification.rs
src/module/notification_service_module/services/: notification_service.rs
