[package]
name = "nofitication-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
env_logger = "0.11.7"
log = "0.4.26"
redis = "0.29.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
deadpool-redis = "0.20.0"
uuid = { version = "1.16.0", features = ["v4"] }